forced zero errors trikeshed